[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/gameplay/win_game_layer/win_game_layer.gd" type="Script" id=1]
[ext_resource path="res://assets/ui-theme.tres" type="Theme" id=3]

[node name="WinGameLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ParentLayer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="ParentLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ParentLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
color = Color( 0.243137, 0.211765, 0.290196, 0.717647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxOptions" type="VBoxContainer" parent="ParentLayer/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -68.0
margin_right = 132.0
margin_bottom = 68.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="LinkButton" parent="ParentLayer/Pause/VBoxOptions"]
margin_left = 85.0
margin_top = 24.0
margin_right = 178.0
margin_bottom = 58.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "RESUME"

[node name="MainMenu" type="LinkButton" parent="ParentLayer/Pause/VBoxOptions"]
margin_left = 63.0
margin_top = 78.0
margin_right = 201.0
margin_bottom = 112.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "MAIN MENU"

[node name="LevelWinText" type="Label" parent="ParentLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.5
margin_top = 140.0
margin_right = 244.5
margin_bottom = 71.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
text = "Awesome! 
Let's keep on going!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ParentLayer/Pause/VBoxOptions/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="ParentLayer/Pause/VBoxOptions/MainMenu" to="." method="_on_MainMenu_pressed"]
